[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ["py38"]


[tool.isort]
atomic = true
profile = "black"
py_version = 38


[tool.mypy]
enable_error_code = [
    "ignore-without-code",
]
strict = true

[tool.poetry]
authors = ["JJMC89"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Stubs Only",
]
description = "Type annotations for mwparserfromhell"
license = "MIT"
name = "mwparserfromhell-stubs"
packages = [
    {include = "mwparserfromhell-stubs", from = "src"}
]
readme = "README.md"
repository = "https://github.com/JJMC89/mwparserfromhell-stubs"
version = "0.6.6.240127"

[tool.poetry.dependencies]
python = ">=3.8"
typing-extensions = ">=4.0.0"

[tool.poetry.group.typing.dependencies]
mypy = "1.8.0"
pyright = "1.1.348"

[tool.poetry.group.stubtest.dependencies]
mwparserfromhell = "0.6.6"

[tool.pyright]
enableTypeIgnoreComments = false
typeCheckingMode = "strict"
reportPrivateUsage = false
reportUnnecessaryTypeIgnoreComment = true
