[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"


[project]
authors = [
    { name = "JJMC89" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Stubs Only",
]
dependencies = [
    "typing-extensions (>=4.0.0)",
]
description = "Type annotations for mwparserfromhell"
license = { text = "MIT" }
name = "mwparserfromhell-stubs"
readme = "README.md"
requires-python = ">=3.9"
version = "0.6.6.240127"

[project.urls]
source = "https://github.com/JJMC89/mwparserfromhell-stubs"


[tool.black]
target-version = ["py39"]


[tool.isort]
atomic = true
profile = "black"
py_version = 39


[tool.mypy]
enable_error_code = [
    "ignore-without-code",
]
strict = true


[tool.poetry]
packages = [
    {include = "mwparserfromhell-stubs", from = "src"}
]

[tool.poetry.group.typing.dependencies]
mypy = "1.15.0"
pyright = "1.1.396"

[tool.poetry.group.stubtest.dependencies]
mwparserfromhell = "0.6.6"


[tool.pyright]
enableTypeIgnoreComments = false
typeCheckingMode = "strict"
reportPrivateUsage = false
reportUnnecessaryTypeIgnoreComment = true
